--- a/nmp_dockerfiles/nginx/Dockerfile
+++ b/nmp_dockerfiles/nginx/Dockerfile
@@ -1,1 +1,6 @@
 FROM z100cehk.mirror.aliyuncs.com/library/nginx:1.13.7
+
+ENV TZ Asia/Hangzhou
+
+ADD nginx.conf  /etc/nginx/nginx.conf
+ADD conf.d/*    /etc/nginx/conf.d
