--- a/nmp_dockerfiles/docker-compose.yml
+++ b/nmp_dockerfiles/docker-compose.yml
@@ -1,7 +1,11 @@
+image:
+  nginx
+
 nginx:
   build: ./nginx
   restart: always
   volumes:
     - /data/htdocs:/data/htdocs
+    - /log/nginx:/log/nginx
   ports:
-    - "80:80"
+    - "8080:80"
