--- a/nmp_dockerfiles/nginx/conf.d/default.conf
+++ b/nmp_dockerfiles/nginx/conf.d/default.conf
@@ -7,8 +7,8 @@ server {
     error_log  /log/nginx/default.error.log;
 
     location / {
-        root   /data/htdocs/default;
-        index  index.html index.htm;
+    root    /data/htdocs/defalut;
+    index  index.html index.htm;
     }
 
     #error_page  404              /404.html;
